--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    runtime: nvidia
     image: xmrig
     container_name: xmrig
     privileged: true
