--- a/src/config.json
+++ b/src/config.json
@@ -49,7 +49,7 @@
         "cn-lite/0": false
     },
     "cuda": {
-        "enabled": false,
+        "enabled": true,
         "loader": null,
         "nvml": true,
         "cn/0": false,
