--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,6 +9,10 @@ on:
 
 jobs:
   build:
+    permissions:
+      contents: read
+      packages: write
+      actions: write
     runs-on: ubuntu-latest
     steps:
       - name: Set up QEMU
