--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,6 +6,10 @@ on:
     branches: ["master"]
   pull_request:
     branches: ["master"]
+permissions: 
+  contents: read
+  packages: write
+  actions: write
 
 jobs:
   build:
