--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -37,3 +37,5 @@ jobs:
           tags: |
             ghcr.io/korewachino/xmrig:latest
           push: true
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
